# grpc_test

client/: CMakeLists.txt  main.cpp
proto/: system.grpc.pb.cc  system.grpc.pb.h  system.pb.cc  system.pb.h  system.proto
server/: CMakeLists.txt  database.cpp  database.h  main.cpp
